--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <meta property="og:title" content="iPod-Style Music Player">
     <meta property="og:description" content="Experience the classic iPod interface with my web-based music player.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/moritzgauss/player666/main/material/0830%20(4).gif">
+    <meta property="og:image" content="https://github.com/moritzgauss/player666/blob/e30e4c332b21de9dec69a9b408863da733e0789e/material/0830%20(4).gif">
     <meta property="og:url" content="https://example.com">
     <meta property="og:type" content="website">
 
